deploy/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-4d9e0c36-1c41-4c84-a74e-7da71d65186f
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-4d9e0c36-1c41-4c84-a74e-7da71d65186f
spec:
  ingressClassName: ngrok
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-4d9e0c36-1c41-4c84-a74e-7da71d65186f
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-4d9e0c36-1c41-4c84-a74e-7da71d65186f
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
